# skywalkers

./: .gitignore  Dockerfile  README.dev.md  README.md  docker-compose.yml  justfile  railway.toml
backend/: Dockerfile  Procfile  alembic.ini  create_manager.py  main.py  pyproject.toml  skywalkers.db
backend/alembic/: env.py
backend/alembic/versions/: 055a4027382c_add_time_and_venue_to_games_table.py  22a63f363efc_add_ladder_entries_table.py  33f5bf7a6232_remove_user_role_and_verification.py  86219af15bfd_add_player_table.py  9ebf3d20431d_change_time_column_from_string_to_.py  a164ae1e255a_fix_player_game_stats_columns.py  a20ac14837d4_add_verification_fields_to_player_game_.py  b1c2d3e4f5g6_remove_position_height_weight_from_players.py  d2feeeadd001_merge_date_and_time_column_to_datetime_.py  d759ce139da9_initial_migration.py  d9b72052351b_merge_player_and_game_migrations.py
backend/app/: database.py  dependencies.py  main.py  scheduler.py  schemas.py
backend/app/auth/: auth.py
backend/app/middlewares/: __init__.py  manager_auth.py
backend/app/models/: __init__.py  game.py  ladder.py  player.py  player_game_stats.py  user.py
backend/app/routers/: admin.py  auth.py  fixtures.py  games.py  ladder.py  players.py  stats.py  stats_scraper.py
backend/app/services/: email.py  fixtures_scraper.py  fixtures_service.py  ladder_scraper.py  ladder_service.py  stats_scraper_service.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx
frontend/src/components/: AdminPanel.tsx  AuthPage.css  AuthPage.tsx  CreateManagerModal.tsx  Dashboard.tsx  EmailVerification.tsx  GameDetails.tsx  GameModal.tsx  GamesList.tsx  GamesPanel.tsx  Leaderboard.tsx  Login.tsx  PlayerManagement.css  PlayerManagement.tsx  RecentGames.tsx  Register.tsx  StatsScraperModal.tsx  ThemeToggle.tsx  (+3 more)
(+5 files in other folders)
