[project]
name = "skywalkers-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "emails>=0.6",
    "fastapi>=0.116.1",
    "passlib[argon2]>=1.7.4",
    "bcrypt>=4.0.0,<5.0.0",
    "pydantic[email]>=2.11.7",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.42",
    "uvicorn>=0.35.0",
    "psycopg2-binary>=2.9.6",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "apscheduler>=3.10.4",
]

[project.scripts]
ladder = "app.services.ladder_scraper:display_ladder"
update-ladder = "app.services.ladder_service:scheduled_ladder_update"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
